feat: Improve code structure and increase test coverage
ConversionHistoryController.java: Refactored controller code for better readability and maintainability.
ConversionHistoryControllerTest.java: Expanded test coverage to include additional test cases for improved validation.
ConversionHistoryRepository.java: Cleaned up repository code and optimized queries.
ConversionHistoryService.java: Refactored service methods to enhance performance and readability.
ConversionHistoryServiceTest.java: Increased test coverage with additional scenarios to ensure robustness.
CurrencyConversionController.java: Refined controller logic for clarity and efficiency.
CurrencyConversionControllerTest.java: Added more test cases to cover edge cases and ensure comprehensive validation.
CurrencyConversionService.java: Improved service logic and code structure for better maintainability.
CurrencyConversionServiceTest.java: Expanded tests to cover more scenarios and edge cases.
ExchangeRateController.java: Updated controller for better code organization and performance.
ExchangeRateControllerTest.java: Increased test coverage to validate new and existing functionality.
ExchangeRateService.java: Refactored service methods for improved efficiency and code clarity.
ExchangeRateServiceTest.java: Added additional tests to cover new edge cases and improve coverage.
Refactored code for better readability, maintainability, and performance.
Increased test coverage to ensure more robust and reliable functionality.